# jxcape

./: CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  cliff.toml  justfile
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: release.yml
src/: arrays.rs  cli.rs  env.rs  json.rs  lib.rs  main.rs  objects.rs  strings.rs  testing.rs
