[package]
name = "jxcape"
description = "A command line tool for creating JSON values"
repository = "https://github.com/rhysparry/jxcape"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["json", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde_json = "1.0.113"
